# TerraCryptChat-Tauri

./: .gitignore  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LOGIN_FIXES_SUMMARY.md  MESSAGE_FLOW_FIXES.md  MESSAGE_SENDING_FIXES.md  PORT_CONFIGURATION.md  README.md  RECEIVED_MESSAGE_FLOW.md  ROLE_BASED_PERMISSIONS.md  SECURITY_AUDIT_REPORT.md  SENDING_MESSAGE_FLOW.md  TODO_LIST.md  api_endpoints_documentation.txt  create_db.js  index.html  package-lock.json  package.json  structure.md  tailwind.config.js  test-websocket.js  tsconfig.app.json  vite.config.ts  websocket_tauri_implementation.md
.github/: FUNDING.yml
TerraCryptChat-iOS-main/: .gitignore
chat/: MainActivity.kt  MainScreen.kt  NavHostContainer.kt  TerraCryptApplication.kt
src/: App.css  App.tsx  AppContext.tsx  ChatList.tsx  ChatScreen.css  ChatScreen.tsx  ChatView.tsx  CreateChatForm.tsx  ErrorBoundary.tsx  FallbackApp.tsx  FriendSearch.tsx  FriendsScreen.tsx  GroupChatScreen.tsx  LoginForm.tsx  LoginScreen.tsx  RegisterForm.tsx  SessionContext.tsx  SettingsScreen.tsx  ThemeContext.tsx  authService.ts  chatRequestService.ts  chatService.ts  databaseService.ts  deltaUpdateService.ts  encryptionService.ts  friendService.ts  index.css  main.tsx  messageLinkingManager.ts  messageService.ts  models.ts  nativeApiService.ts  participantService.ts  sessionManager.ts  settingsService.ts  tauri.d.ts  useWebSocketHandler.ts  userService.ts  websocketService.ts  websocketTest.ts
src-tauri/: .taurignore  Cargo.toml  TAURI.code-workspace  build.rs  tauri.conf.json
src-tauri/assets/: index.html
src-tauri/assets/assets/: index-BsdPX8xJ.css  index-D6ZYCAVG.js
src-tauri/capabilities/: default.json  default.toml
src-tauri/icons/: icon.icns  logov2.icns
src-tauri/permissions/core/: default.json
src-tauri/permissions/core/event/: allow-emit-to.json  allow-emit.json  allow-listen.json
src-tauri/permissions/store/: default.json
src-tauri/sql/: full_tauri_schema.sql
src-tauri/src/: commands.rs  database.rs  database_async.rs  lib.rs  main.rs  websocket.rs
src-tauri/src/modules/: auth.rs  chat.rs  database.rs  friend.rs  mod.rs  participant.rs  websocket.rs  window.rs
(+152 files in other folders)
