[package]
name = "app"
version = "0.1.0"
description = "Terracrypt Chat – A Tauri Desktop App"
authors = ["Vaha"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

tauri = { version = "2.3.0", features = ["unstable"] }
tauri-plugin-log = "2.0.0"
rusqlite = { version = "0.30", features = ["bundled"] }
tauri-plugin-store = "2.3.0"

# Added dependencies
tokio-util = "0.6"
tokio-native-tls = "0.3"
futures = "0.3"
crypto = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

