[package]
name = "app"
version = "1.0.0"
description = "Terracrypt Chat – A Tauri Desktop App"
authors = ["Vaha"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
tauri-plugin-log = "2.6.0"
tauri-plugin-sql = "2.3.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
base64 = "0.21"
